# mcp-brazil-marketplaces

./: CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
mcp_brazil_marketplaces/: server.py
olx_mcp/: server.py
tests/: test_unit.py
tests/integration/: test_mcp_integration.py
