[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-brazil-marketplaces"
version = "0.3.0"
description = "MCP server para buscar anúncios em marketplaces brasileiros (OLX, Mercado Livre)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "marketplace",
    "brazil",
    "brasil",
    "olx",
    "mercadolivre",
    "mercado-livre",
    "classifieds",
    "scraping",
    "ecommerce",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0,<2.0",
    "httpx[http2]>=0.27.0,<1.0",
    "pydantic>=2.0.0,<3.0",
]

[project.scripts]
mcp-brazil-marketplaces = "mcp_brazil_marketplaces.server:main"

[project.urls]
Homepage = "https://github.com/rodrigopg/mcp-brazil-marketplaces"
Repository = "https://github.com/rodrigopg/mcp-brazil-marketplaces"
Issues = "https://github.com/rodrigopg/mcp-brazil-marketplaces/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_brazil_marketplaces"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integração depende de rede + servidor real — rodar manual com -m integration
addopts = "--ignore=tests/integration"
markers = [
    "integration: testes que dependem de rede (OLX/ML/Jina)",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length checada por outro hook

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E731"]
